--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,30 @@
-body {
+body, h1, h2, h3, p, ul, li {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+}
+body {
+  font-size: 16px;
+  font-family: 'Saira', sans-serif !important;
+  height: 300vh;
+  background-color: rgba(0, 0, 0, 0.74) !important;
+}
+*, *:before, *:after {
+  box-sizing: border-box;
+}
+a {
+  text-decoration: none;
+}
+img{
+  width: 100%;
+}
+li{
+  list-style: none;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  --nav-Bg: #000000; 
+  /* --gold-gredient: linear-gradient(90deg, #b88c4f 1.05%, #fabc3c); */
+  --gold-gredient: linear-gradient(90deg, #fabc3c 1.05%, #b88c4f);
 }
+
+
