--- a/src/index.css
+++ b/src/index.css
@@ -24,9 +24,15 @@ ul{
   padding: 0 !important;
   margin: 0 !important;
 }
+.sec_padding{
+  padding: 120px 0;
+}
 
 :root {
   --nav-Bg: #000000; 
+  --dark-black-bg: #17161a;
+  --soft-black-bg: #111215;
+  --gold-color: #b88c4f;
   /* --gold-gredient: linear-gradient(90deg, #b88c4f 1.05%, #fabc3c); */
   --gold-gredient: linear-gradient(90deg, #fabc3c 1.05%, #b88c4f);
 }
