--- a/src/components/workProcess/workProcess.css
+++ b/src/components/workProcess/workProcess.css
@@ -1,20 +1,24 @@
-.workProcess__handler{
+.workProcess__handler {
     margin-top: 120px;
     margin-bottom: 120px;
 }
-.workProcess__slider{
+
+.workProcess__slider {
     /* padding-top: 150px; */
 }
-.work__slider__img{
+
+.work__slider__img {
     position: relative;
 }
-.work__slider__img img{
+
+.work__slider__img img {
     width: 100%;
     height: 450px;
     vertical-align: middle;
     /* border-radius: 20px; */
 }
-.work__process__inner{
+
+.work__process__inner {
     position: absolute;
     background: rgba(23, 22, 26, 0.783);
     left: 0;
@@ -23,21 +27,23 @@
     text-align: center;
     top: 0;
 }
-.work__process__inner b{
+
+.work__process__inner b {
     color: #fff;
     font-size: 65px;
     font-weight: 700;
     left: 5px;
     letter-spacing: .03em;
     line-height: 1;
-    opacity: .1;
+    opacity: .2;
     position: absolute;
     text-transform: capitalize;
     top: 50%;
     -webkit-transform: translateY(-50%);
     transform: translateY(-50%);
 }
-.work__process__inner h4{
+
+.work__process__inner h4 {
     color: #fff;
     font-size: 20px;
     font-weight: 600;
@@ -45,7 +51,8 @@
     margin: 0;
     text-transform: capitalize;
 }
-.work__process__content{
+
+.work__process__content {
     position: relative;
     background: rgba(0, 0, 0, 0.88);
     border: 1px solid hsla(0, 0%, 68%, .2);
@@ -54,10 +61,11 @@
     text-align: left;
     width: 500px;
 }
-.work__process__content::before{
+
+.work__process__content::before {
     content: "";
     position: absolute;
-    background: radial-gradient(105.91% 105.91% at 37.1% 19.35%,rgba(255, 208, 1, 0.7) 0,rgba(217,10,44,0) 83.11%);
+    background: radial-gradient(105.91% 105.91% at 37.1% 19.35%, rgba(255, 208, 1, 0.7) 0, rgba(217, 10, 44, 0) 83.11%);
     border-radius: 50%;
     bottom: 0;
     height: 150px;
@@ -65,34 +73,39 @@
     right: 0;
     width: 150px;
 }
-.work__process__content p{
+
+.work__process__content p {
     color: #fff;
     font-size: 18px;
     font-weight: 400;
 }
-.workProcess__handler .swiper-slide:not(.swiper-slide-active){
-    opacity: 0 !important;
-  }
 
-  .workProcess__handler .swiper-wrapper{
+.workProcess__handler .swiper-slide:not(.swiper-slide-active) {
+    opacity: 0 !important;
+}
+
+.workProcess__handler .swiper-wrapper {
     margin-bottom: -5px;
     padding-bottom: 50px;
 }
-.workProcess__handler .swiper-pagination{
+
+.workProcess__handler .swiper-pagination {
     bottom: 0;
 }
-.workProcess__handler .swiper-pagination-bullet{
+
+.workProcess__handler .swiper-pagination-bullet {
     background: transparent;
     border: 1px solid hsla(0, 0%, 0%, 0.7);
     height: 15px;
-    margin: 0 12.5px!important;
+    margin: 0 12.5px !important;
     opacity: 1;
     padding: 8px;
     position: relative;
     width: 15px;
     cursor: pointer;
 }
-.workProcess__handler .swiper-pagination-bullet-active{
+
+.workProcess__handler .swiper-pagination-bullet-active {
     border: 1px solid var(--dark-gold-color);
     box-sizing: border-box;
     height: 20px;
@@ -100,7 +113,8 @@
     position: relative;
     width: 20px;
 }
-.workProcess__handler .swiper-pagination-bullet:before{
+
+.workProcess__handler .swiper-pagination-bullet:before {
     background-color: hsla(0, 0%, 0%, 0.7);
     border-radius: 50%;
     content: "";
@@ -108,11 +122,12 @@
     left: 50%;
     position: absolute;
     top: 50%;
-    -webkit-transform: translate(-50%,-50%);
-    transform: translate(-50%,-50%);
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
     width: 7.5px;
 }
-.workProcess__handler .swiper-pagination-bullet-active:before{
+
+.workProcess__handler .swiper-pagination-bullet-active:before {
     background-color: var(--dark-gold-color);
     border-radius: 50%;
     content: "";
@@ -121,13 +136,13 @@
     opacity: .9;
     position: absolute;
     top: 50%;
-    -webkit-transform: translate(-50%,-50%);
-    transform: translate(-50%,-50%);
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
     width: 10px;
 }
 
 @media screen and (max-width: 767px) {
-    .work__process__content{
+    .work__process__content {
         margin-top: -60px;
     }
 }
