--- a/src/components/projectDetailsSec/projectDetailsSec.css
+++ b/src/components/projectDetailsSec/projectDetailsSec.css
@@ -37,7 +37,7 @@
 }
 .project__banner img{
     width: 100%;
-    height: 500px;
+    /* height: 500px; */
 }
 .project__overview{
     margin-bottom: 60px;
